--- a/appsettings.json
+++ b/appsettings.json
@@ -2,11 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=LEONIDAS-MV\\SQLEXPRESS;Database=mula;Trusted_Connection=True;TrustServerCertificate=True"
   },
-  "Jwt": {
-    "Key": "SuperSecureKeyForJWTToken2024!!!", // Clau de 32 caràcters o més
-    "Issuer": "http://apicontactes.com",
-    "Audience": "http://frontcontactes.com"
-},
+    "Jwt": {
+        "Key": "SuperSecureKeyForJWTToken2024!!!", // Clau de 32 caràcters o més
+        "Issuer": "https://leonidas-api.com",
+        "Audience": "https://leonidas-react.com"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
